# cpp_template

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/: utils.hpp
src/: utils.cpp
